# libvmod-digest

./: Makefile.am  configure.ac
src/: Makefile.am  vmod_maxdigest.c  vmod_maxdigest.vcc
